package com.donc.eatclub.model;

public record Deal(
    String objectId,
    String discount,
    String dineIn,
    String lightning,
    String open,
    String close,
    String start,
    String end,
    String qtyLeft
) {

}
